<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditTextPreference
        android:defaultValue="usuario"
        android:key="login_usuario"
        android:summary="@string/summary_display_size"
        android:title="@string/title_display_size" />

    <EditTextPreference
        android:defaultValue="pass"
        android:key="pass"
        android:summary="@string/summary_order"
        android:title="@string/title_order" />



    <SwitchPreference
        android:defaultValue="true"
        android:key="email_confirm"
        android:summary="@string/summary_confirm_delete"
        android:title="@string/title_confirm_delete" />


</PreferenceScreen>